--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -4,3 +4,6 @@
     font-family: -apple-system, "BlinkMacSystemFont", "Segoe UI", "Helvetica", "Arial", "sans-serif", "Apple Color Emoji", "Segoe UI Emoji";
   }
 </style>
+<script>
+  window.global = window;
+</script>
